<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/about_us_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/about_us"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_photo1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/pfp"
                android:src="@drawable/tkd" />

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/aloot_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/profession"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/aloot_bio"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/aloot_gmail"
                android:textColor="#007AFF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/youtube_icon1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ytt" />

                <ImageView
                    android:id="@+id/github_icon1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/github" />

                <ImageView
                    android:id="@+id/facebook_icon1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/fb" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_photo2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/amarille" />

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/amarille_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/amarille_prof"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/amarille_bio"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/amarille_email"
                android:textColor="#007AFF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/youtube_icon2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ytt" />

                <ImageView
                    android:id="@+id/github_icon2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/github" />

                <ImageView
                    android:id="@+id/facebook_icon2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/fb" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_photo3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nadjah_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nadjah_prof"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/nadjah_bio"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nadjah_email"
                android:textColor="#007AFF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/youtube_icon3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ytt" />

                <ImageView
                    android:id="@+id/github_icon3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/github" />

                <ImageView
                    android:id="@+id/facebook_icon3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/fb" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_photo4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/gail" />

            <TextView
                android:id="@+id/name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/loking_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gail_prof"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/loking_bio"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/gail_email"
                android:textColor="#007AFF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/youtube_icon4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ytt" />

                <ImageView
                    android:id="@+id/github_icon4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/github" />

                <ImageView
                    android:id="@+id/facebook_icon4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/fb" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_photo5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/nob" />

            <TextView
                android:id="@+id/name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Nob_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/Nob_prof"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/desc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/Nob_bio"
                android:textAlignment="center"
                android:textColor="#555555"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Nob_email"
                android:textColor="#007AFF"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/youtube_icon5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ytt" />

                <ImageView
                    android:id="@+id/github_icon5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/github" />

                <ImageView
                    android:id="@+id/facebook_icon5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/fb" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
